@@ -34,6 +34,7 @@ Bug fixes:
 ..F....... [ZBX-8659] fixed graphs in screens not respecting "Show legend" setting when in dynamic mode (Krists)
 .......... [ZBX-8679] removed outdated and unused images (Richlv)
 ..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)
+...G...... [ZBX-8595] fixed incorrect event message when handling eventlog (dimir)
 
 --------------------------------------------------------------------------------
 Changes for 2.4.0
@@ -443,6 +444,7 @@ A.F....... [ZBX-8650] fixed undefined index in user.get method when using 'searc
 ........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
 ........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)
 ..F....... [ZBX-8616] fixed link to host items in Inventory->Hosts host view (Krists)
+...G...... [ZBX-8595] fixed incorrect event message when handling eventlog (dimir)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.6
@@ -1525,6 +1527,7 @@ Bug fixes:
 ........S. [ZBX-8798] fixed evaluation of trigger expressions where a suffixed number is followed by a subtraction (asaveljevs)
 .......... [ZBX-8679] removed outdated and unused images (Richlv)
 ..F....... [ZBX-8700] fixed possible SQL error in details of web scenario (Oleg)
+...G...... [ZBX-8595] fixed incorrect event message when handling eventlog (dimir)
 
 --------------------------------------------------------------------------------
 Changes for 2.0.13
@@ -3109,6 +3112,7 @@ New features:
 Changes for 1.8.22rc1
 
 ........S. [ZBX-8798] fixed evaluation of trigger expressions where a suffixed number is followed by a subtraction (asaveljevs)
+...G...... [ZBX-8595] fixed incorrect event message when handling eventlog (dimir)
 
 Changes for 1.8.21
 
